Update Docker build process