@@ -1,6 +1,5 @@
 package capstone.ms.api.common.configs;
 
-import capstone.ms.api.common.properties.FrontendProperties;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -8,18 +7,22 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
 public class CorsGlobalConfig {
 
-    private final FrontendProperties frontendProps;
-
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of(frontendProps.getUrl()));
+        config.setAllowedOrigins(Arrays.asList(
+                "http://localhost:3000",
+                "http://cp25ms1.sit.kmutt.ac.th",
+                "https://cp25ms1.sit.kmutt.ac.th",
+                "https://bscit.sit.kmutt.ac.th"
+        ));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
